# Ares-2.0

./: .gitignore
Control-plane/: build.gradle.kts  pom.xml  settings.gradle.kts
Control-plane/proto/: comoute.proto  compute.proto
Control-plane/src/main/java/com/ares/controlplane/: ControlPlaneApplication.java
Control-plane/src/main/java/com/ares/controlplane/controller/: HealthController.java  TaskController.java
Control-plane/src/main/java/com/ares/controlplane/dto/: TaskRequestDto.java  TaskResponseDto.java
Control-plane/src/main/java/com/ares/controlplane/enums/: Status.java
Control-plane/src/main/java/com/ares/controlplane/exception/: GlobalExceptionHandler.java
Control-plane/src/main/java/com/ares/controlplane/service/: ComputeEngineClient.java  TaskService.java
Control-plane/src/main/kotlin/com/ares/controlplane/: ControlPlaneApplication.kt
Control-plane/src/main/resources/: application.properties
Control-plane/src/test/kotlin/com/ares/controlplane/: ControlPlaneApplicationTests.kt
rust-agent/: Cargo.toml  build.rs
rust-agent/proto/: compute.proto
rust-agent/src/: config.rs  main.rs  proto.rs  server.rs
rust-agent/src/execution/: engine.rs  mod.rs  shell.rs
rust-agent/src/proto/: compute.proto
rust-agent/src/services/: compute.rs
